# zonewarden

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATE.md  deny.toml
.factory/: STATE.md  current-cycle
.factory/cycles/zonewarden-greenfield/adversarial-reviews/: ADV-P1-INDEX.md  ADV-P5-INDEX.md  ADV-P7-INDEX.md  pass-1.md  pass-2.md  pass-3.md  pass-5.md
.factory/holdout-scenarios/wave-scenarios/: HS-001-deny-by-default.md  HS-002-idmz-bypass.md  HS-005-unspecified-address-skip.md  HS-006-portset-semantics.md  HS-007-ingest-cap.md  HS-008-accounting-identity.md  HS-010-wrong-direction.md
.factory/specs/: product-brief.md
.factory/specs/architecture/: ARCH-INDEX.md
.factory/specs/architecture/decisions/: ADR-001-sync-batch-no-async.md  ADR-002-crate-workspace-layout.md  ADR-003-prefix-match-sorted-vec.md  ADR-004-canonical-json-sha256-digest.md  ADR-005-yaml-parser-serde-norway.md  ADR-006-error-handling-thiserror.md
.factory/specs/behavioral-contracts/ss-01/: BC-1.01.006.md  BC-1.01.009.md
.factory/specs/behavioral-contracts/ss-02/: BC-1.02.003.md  BC-1.02.005.md
.factory/specs/behavioral-contracts/ss-03/: BC-1.03.001.md  BC-1.03.002.md  BC-1.03.005.md
.factory/specs/behavioral-contracts/ss-04/: BC-1.04.002.md  BC-1.04.003.md  BC-1.04.004.md  BC-1.04.005.md  BC-1.04.006.md  BC-1.04.007.md  BC-1.04.010.md  BC-1.04.011.md
.factory/specs/behavioral-contracts/ss-06/: BC-1.06.002.md  BC-1.06.005.md  BC-1.06.006.md  BC-1.06.008.md
.factory/specs/domain-spec/: capabilities.md  edge-cases.md  events.md  failure-modes.md  invariants.md  risks.md  ubiquitous-language.md
.factory/specs/prd-supplements/: module-criticality.md  nfr-catalog.md
.factory/specs/verification-properties/: VP-001.md  VP-002.md  VP-003.md  VP-005.md  VP-006.md  VP-008.md  VP-009.md
.factory/stories/: S-1.01-workspace-portset.md  S-1.02-policy-yaml-load.md  S-1.03-policy-validation.md  S-2.01-zeek-parser.md  S-2.02-service-inference-cap.md  S-3.02-multicast-detection.md  S-4.01-severity-grading.md  S-4.02-idmz-truth-table.md  S-4.03-classifier-core.md  S-4.04-multicast-exempt-totality.md  S-5.01-policy-digest.md  S-5.03-aggregator-sort.md  S-6.03-cli-integration.md  sprint-state.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  fuzz.yml  kani.yml  mutants.yml  perf.yml  release.yml
cycles/zonewarden-greenfield/: wave-schedule.md
cycles/zonewarden-greenfield/adversarial-reviews/: ADV-P2-INDEX.md  ADV-P3-INDEX.md  ADV-P4-INDEX.md  ADV-P6-INDEX.md  ADV-P8-INDEX.md  pass-4.md  pass-6.md  pass-7.md  pass-8.md  phase-5-refinement.md  phase-6-hardening.md  wave-2-gate.md  wave-3-gate.md  wave-4-gate.md  wave-5-gate.md
demo-evidence/: wave-5-demo.md
docs/: performance.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_policy.rs  fuzz_zeek.rs
holdout-scenarios/: HS-INDEX.md
holdout-scenarios/wave-scenarios/: HS-003-multicast-exemption.md  HS-004-determinism.md  HS-009-offline-invariant.md  HS-010-wrong-direction.md
logs/: mutation-report-phase6-core.md
planning/: brainstorming-report.md
specs/: prd.md
specs/architecture/: SS-00-overview.md  SS-01-pipeline.md  SS-02-data-model.md  SS-03-cli-adapter.md
specs/architecture/decisions/: ADR-007-mermaid-string-generation.md
specs/behavioral-contracts/: BC-INDEX.md  bc-id-mapping.md
specs/behavioral-contracts/ss-01/: BC-1.01.001.md  BC-1.01.002.md  BC-1.01.003.md  BC-1.01.004.md  BC-1.01.005.md  BC-1.01.007.md  BC-1.01.008.md
specs/behavioral-contracts/ss-02/: BC-1.02.001.md  BC-1.02.002.md  BC-1.02.004.md  BC-1.02.006.md
specs/behavioral-contracts/ss-03/: BC-1.03.003.md  BC-1.03.004.md
specs/behavioral-contracts/ss-04/: BC-1.04.001.md  BC-1.04.008.md  BC-1.04.009.md
specs/behavioral-contracts/ss-05/: BC-1.05.001.md  BC-1.05.002.md  BC-1.05.003.md  BC-1.05.004.md  BC-1.05.005.md
specs/behavioral-contracts/ss-06/: BC-1.06.001.md  BC-1.06.003.md  BC-1.06.004.md  BC-1.06.007.md
specs/domain-spec/: L2-INDEX.md  assumptions.md  differentiators.md  entities.md
specs/prd-supplements/: error-taxonomy.md  interface-definitions.md
specs/research/: RESEARCH-INDEX.md  domain-ot-segmentation-validation-2026-06-17.md
specs/verification-properties/: VP-004.md  VP-007.md  VP-010.md  VP-INDEX.md
stories/: S-3.01-zone-resolver.md  S-5.02-aggregator-identity.md  S-6.01-reporter-formatters.md  S-6.02-atomic-write-warnings.md  STORY-INDEX.md  dependency-graph.md  epics.md  sprint-state.yaml
zonewarden/: Cargo.toml
zonewarden-core/: Cargo.toml
zonewarden-core/benches/: classify.rs
zonewarden-core/src/: aggregator.rs  classifier.rs  digest.rs  errors.rs  idmz.rs  lib.rs  multicast.rs  portset.rs  resolver.rs  severity.rs  types.rs  validator.rs
zonewarden-core/tests/: aggregator_tests.rs  classifier_tests.rs  digest_tests.rs  errors_tests.rs  idmz_tests.rs  multicast_tests.rs  resolver_tests.rs  severity_tests.rs  types_tests.rs  validator_tests.rs
zonewarden/src/: cli.rs  lib.rs  main.rs  policy.rs  reporter.rs
zonewarden/src/adapters/: mod.rs  zeek.rs
zonewarden/tests/: cap_tests.rs  integration_tests.rs  policy_load_tests.rs  reporter_atomic_tests.rs  reporter_tests.rs  service_inference_tests.rs  zeek_adapter_tests.rs
zonewarden/tests/fixtures/: cli_policy.yaml  dup_key.yaml  invalid_direction.yaml  invalid_proto.yaml  minimal.yaml  missing_field.yaml
