[package]
name = "zonewarden-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zonewarden = { path = "../zonewarden" }

[[bin]]
name = "fuzz_zeek"
path = "fuzz_targets/fuzz_zeek.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_policy"
path = "fuzz_targets/fuzz_policy.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace (cargo-fuzz convention).
[workspace]
