[package]
name = "zonewarden-core"
version = "0.0.1"
description = "Pure, deterministic core for OT segmentation conformance (zonewarden)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# Pure-core deps only: no I/O, no network. `thiserror` is a proc-macro/std-only
# error-derive crate (ADR-006). Serialization (serde) is kept OUT of the core —
# the effectful shell (zonewarden binary) owns wire formats.
[dependencies]
thiserror = "1.0"
ipnet = "2.9"   # IpNet for the longest-prefix index + equal-prefix tie detection (ADR-003)

[dev-dependencies]
proptest = "1"

# `kani` is a known cfg: the formal-verification harnesses are compiled only under
# `cargo kani` (--cfg kani). Declaring it here silences the unexpected-cfgs lint.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
