[package]
name = "zonewarden-core"
version = "0.0.1"
description = "Pure, deterministic core for OT segmentation conformance (zonewarden)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# Pure-core deps only: no I/O, no network. `thiserror` is a proc-macro/std-only
# error-derive crate (ADR-006). Serialization (serde) is kept OUT of the core —
# the effectful shell (zonewarden binary) owns wire formats.
[dependencies]
thiserror = "1.0"
ipnet = "2.9"   # IpNet for the longest-prefix index + equal-prefix tie detection (ADR-003)
# Pure (no-I/O) deps for the policy digest (ADR-004). serde_json builds the
# canonical JSON (default BTreeMap Map => lexicographically-sorted keys, DI-018);
# sha2 hashes it. The YAML *wire parser* (serde_norway) stays in the shell.
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

# Performance budgets (NFR-PERF). The classify hot path is the pure core's
# throughput-critical loop; the bench establishes a baseline and guards against
# regression. See benches/classify.rs and docs/performance.md.
[[bench]]
name = "classify"
harness = false

# `kani` is a known cfg: the formal-verification harnesses are compiled only under
# `cargo kani` (--cfg kani). Declaring it here silences the unexpected-cfgs lint.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
