[package]
name = "zonewarden"
version = "0.0.1"
description = "Segmentation-as-code for OT/ICS networks: validate IEC 62443 zone/conduit policy against observed flows."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "zonewarden"
path = "src/lib.rs"

[[bin]]
name = "zonewarden"
path = "src/main.rs"

[dependencies]
zonewarden-core = { path = "../zonewarden-core" }
serde = { version = "1.0", features = ["derive"] }
serde_norway = "0.9"   # YAML with strict duplicate-key detection (ADR-005)

[dev-dependencies]
proptest = "1"   # property tests: dense flow_index, accounting identity, panic-free parse
